feat: Add styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
-<p><a href="/login">Login page</a></p>
-<p><a href="/register">Register page</a></p>
-<p><a href="/">Main page</a></p>
-
+<%- include('head.ejs'); %>
 
 <h1>This is main page</h1>
+
+<%- include('foot.ejs'); %>
