--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,4 @@
-<p><a href="/login">Login page</a></p>
-<p><a href="/register">Register page</a></p>
-<p><a href="/">Main page</a></p>
+<%- include('head.ejs'); %>
 <h1>Login page</h1>
 
 <form>
@@ -8,3 +6,5 @@
 	<input type="password" name="pass">
 	<input type="submit">
 </form>
+
+<%- include('foot.ejs'); %>
