--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,3 +1,11 @@
-<p><a href="/login">Login page</a></p>
-<p><a href="/register">Register page</a></p>
-<p><a href="/">Main page</a></p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
+</head>
+<body>
+	<p><a href="/login">Login page</a></p>
+	<p><a href="/register">Register page</a></p>
+	<p><a href="/">Main page</a></p>
+
