--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('head.ejs'); %>
 
-<h1>This is main page</h1>
-
+<h1> This is main page </h1>
+<% if(message) { %>
+	<%= message %>
+<% } %>
 <%- include('foot.ejs'); %>
