--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,10 @@
 <%- include('head.ejs'); %>
-<h1>Login page</h1>
 
-<form>
-	<input type="text" name="login">
-	<input type="password" name="pass">
+<h1> Login page </h1>
+
+<form action="/login" method="POST">
+	<input type="text" name="login" placeholder="Login">
+	<input type="password" name="pass" placeholder="Password">
 	<input type="submit">
 </form>
 
