--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,10 @@
 <%- include('head.ejs'); %>
-<h1>Register page</h1>
 
-<form>
-	<input type="text" name="login">
-	<input type="password" name="pass">
+<h1> Register page </h1>
+
+<form action="/register" method="POST">
+	<input type="text" name="login" placeholder="Login">
+	<input type="password" name="pass" placeholder="Password">
 	<input type="submit">
 </form>
 
